# openai_agents_sdk

./: README.md  chatbot.py  pyproject.toml
_01/: 01_sync.py  02_async.py  02b_openrouter.py  03_chainlit.py  04_openai_with_chainlit.py  04_streaming.py  05_history_in_chainlit.py  06_streaming.py  07_streaming_in_chainlit.py  08_tools.py  08a_mutiple_tools.py  08b_parallel_tool_calls.py  08c_tool_choice.py  08d_tool_use_behavior.py  09_sync_vs_async.py  09_tools_in_chainlit.py  11_handoff.py  12_generics_in_python.py  12_guardrail.py  13_agent_as_tool.py  13_output_format.py  14_handoff.py  15_deterministic_handoff copy.py  15_deterministic_handoff.py  15_guardrail.py  16_agent_as_tool.py  16_handoff_advance.py  17_deterministic.py  18_chroma.py  18_multi_turn_convo.py  19_chroma_with_langchain.py  19_straming_events.py  20_chroma_with_langchain_advance.py  20_parallelization.py
_02_python/: 01_objects_in_python.py  02_callable_objects_in_python.py
_03_rag/: 19_chroma_with_langchain.py  20_qdrant.py
chroma_db/: chroma.sqlite3
qdrant_local/: meta.json
qdrant_local/collection/panaversity_docs/: storage.sqlite
