[project]
name = "getting-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.201",
    "chromadb>=1.0.5",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.21",
    "langchain>=0.3.23",
    "langchain-google-genai>=2.0.10",
    "openai-agents>=0.0.6",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.6",
    "qdrant-client>=1.13.3",
    "langchain-qdrant>=0.2.0",
    "pypdf>=5.4.0",
]
